/cp 2014-08-27  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/52892
	* semantics.c (cxx_eval_call_expression): Use STRIP_NOPS on the
	result of cxx_eval_constant_expression.

/testsuite
2014-08-27  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/52892
	* g++.dg/cpp0x/constexpr-52892-1.C: New.
	* g++.dg/cpp0x/constexpr-52892-2.C: Likewise.
	* g++.dg/cpp0x/constexpr-52282-1.C: Likewise.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@214579 138bc75d-0d04-0410-961f-82ee72b054a4